src/objects/Application_Group_Date_Range__c.object
<CustomObject>
    <description>[Object to support Zuora royalty solution]
Application Group date ranges and cumulator</description>
    <fields>
        <fullName>Application_Group__c</fullName>
        <label>Current Ship Volume</label>
        <referenceTo>Application_Group__c</referenceTo>
        <relationshipLabel>Current Ship Volume Date Ranges</relationshipLabel>
        <relationshipName>Application_Group_Date_Range</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cumulative_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Units__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Current Ship Volume Date Range</label>
    <nameField>
        <displayFormat>AppGrpDtRng-{000000}</displayFormat>
        <label>Current Ship Volume Date Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Ship Volume Date Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>